Added names, items, little bit of ui.

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.min.js"></script>
   <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
 
+  <script src="util\ui.js"></script>
+  <script src="objects\item.js"></script>
   <script src="objects\player.js"></script>
   <script src="objects\otherperson.js"></script>
   <script src="sketch.js"></script>
