--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
 
   <script src="util\ui.js"></script>
-  <script src="objects\item.js"></script>
   <script src="objects\player.js"></script>
+  <script src="objects\item.js"></script>
   <script src="objects\otherperson.js"></script>
   <script src="sketch.js"></script>
 </head>
@@ -21,5 +21,6 @@
   </main>
 </body>
 <style>
+  body { text-align: center }
 </style>
 </html>
